@@ -103,7 +103,7 @@ public class TextArea extends TextField {
 		if (prefRows <= 0) {
 			return super.getPrefHeight();
 		} else {
-			float prefHeight = textHeight * prefRows;
+			float prefHeight = lineHeight * prefRows;
 			if (style.background != null) {
 				prefHeight = Math.max(prefHeight + style.background.getBottomHeight() + style.background.getTopHeight(),
 					style.background.getMinHeight());
@@ -206,8 +206,9 @@ public class TextArea extends TextField {
 	protected float getTextY (BitmapFont font, @Null Drawable background) {
 		float textY = getHeight();
 		if (background != null) {
-			textY = (int)(textY - background.getTopHeight());
+			textY = textY - background.getTopHeight();
 		}
+		if (font.usesIntegerPositions()) textY = (int)textY;
 		return textY;
 	}
 
@@ -216,6 +217,7 @@ public class TextArea extends TextField {
 		float offsetY = 0;
 		int minIndex = Math.min(cursor, selectionStart);
 		int maxIndex = Math.max(cursor, selectionStart);
+		BitmapFont.BitmapFontData fontData = font.getData();
 		while (i + 1 < linesBreak.size && i < (firstLineShowing + linesShowing) * 2) {
 
 			int lineStart = linesBreak.get(i);
@@ -224,13 +226,21 @@ public class TextArea extends TextField {
 			if (!((minIndex < lineStart && minIndex < lineEnd && maxIndex < lineStart && maxIndex < lineEnd)
 				|| (minIndex > lineStart && minIndex > lineEnd && maxIndex > lineStart && maxIndex > lineEnd))) {
 
-				int start = Math.max(linesBreak.get(i), minIndex);
-				int end = Math.min(linesBreak.get(i + 1), maxIndex);
+				int start = Math.max(lineStart, minIndex);
+				int end = Math.min(lineEnd, maxIndex);
 
-				float selectionX = glyphPositions.get(start) - glyphPositions.get(linesBreak.get(i));
+				float fontLineOffset = 0;
+				// we can't use fontOffset as it is valid only for first glyph/line in the text
+				// we will grab first character in this line and calculate proper offset for this line
+				BitmapFont.Glyph lineFirst = fontData.getGlyph(displayText.charAt(lineStart));
+				if (lineFirst != null) {
+					// BitmapFontData.getGlyphs()#852
+					fontLineOffset = lineFirst.fixedWidth? 0 : -lineFirst.xoffset * fontData.scaleX - fontData.padLeft;
+				}
+				float selectionX = glyphPositions.get(start) - glyphPositions.get(lineStart);
 				float selectionWidth = glyphPositions.get(end) - glyphPositions.get(start);
-
-				selection.draw(batch, x + selectionX + fontOffset, y - textHeight - font.getDescent() - offsetY, selectionWidth,
+				// we add the fontLineOffset to the width not to x so all line selections start at same x which looks better
+				selection.draw(batch, x + selectionX, y - lineHeight - offsetY, selectionWidth + fontLineOffset,
 					font.getLineHeight());
 			}
 
@@ -240,7 +250,7 @@ public class TextArea extends TextField {
 	}
 
 	protected void drawText (Batch batch, BitmapFont font, float x, float y) {
-		float offsetY = 0;
+		float offsetY = -(lineHeight - textHeight) / 2;
 		for (int i = firstLineShowing * 2; i < (firstLineShowing + linesShowing) * 2 && i < linesBreak.size; i += 2) {
 			font.draw(batch, displayText, x, y + offsetY, linesBreak.items[i], linesBreak.items[i + 1], 0, Align.left, false);
 			offsetY -= font.getLineHeight();
@@ -248,11 +258,7 @@ public class TextArea extends TextField {
 	}
 
 	protected void drawCursor (Drawable cursorPatch, Batch batch, BitmapFont font, float x, float y) {
-		float textOffset = cursor >= glyphPositions.size || cursorLine * 2 >= linesBreak.size ? 0
-			: glyphPositions.get(cursor) - glyphPositions.get(linesBreak.items[cursorLine * 2]);
-		cursorPatch.draw(batch, x + textOffset + fontOffset + font.getData().cursorX,
-			y - font.getDescent() / 2 - (cursorLine - firstLineShowing + 1) * font.getLineHeight(), cursorPatch.getMinWidth(),
-			font.getLineHeight());
+		cursorPatch.draw(batch, x + getCursorX(), y + getCursorY(), cursorPatch.getMinWidth(), font.getLineHeight());
 	}
 
 	protected void calculateOffsets () {
@@ -343,12 +349,24 @@ public class TextArea extends TextField {
 	}
 
 	public float getCursorX () {
-		return textOffset + fontOffset + style.font.getData().cursorX;
+		float textOffset = 0;
+		BitmapFont.BitmapFontData fontData = style.font.getData();
+		if (!(cursor >= glyphPositions.size || cursorLine * 2 >= linesBreak.size)) {
+			int lineStart = linesBreak.items[cursorLine * 2];
+			float glyphOffset = 0;
+			BitmapFont.Glyph lineFirst = fontData.getGlyph(displayText.charAt(lineStart));
+			if (lineFirst != null) {
+				// BitmapFontData.getGlyphs()#852
+				glyphOffset = lineFirst.fixedWidth ? 0 : -lineFirst.xoffset * fontData.scaleX - fontData.padLeft;
+			}
+			textOffset = glyphPositions.get(cursor) - glyphPositions.get(lineStart) + glyphOffset;
+		}
+		return textOffset + fontData.cursorX;
 	}
 
 	public float getCursorY () {
 		BitmapFont font = style.font;
-		return -(-font.getDescent() / 2 - (cursorLine - firstLineShowing + 1) * font.getLineHeight());
+		return -(cursorLine - firstLineShowing + 1) * font.getLineHeight();
 	}
 
 	/** Input listener for the text area **/
