@@ -103,7 +103,7 @@ public class TextField extends Widget implements Disableable {
 	private StringBuilder passwordBuffer;
 	private char passwordCharacter = BULLET;
 
-	protected float fontOffset, textHeight, textOffset;
+	protected float fontOffset, textHeight, lineHeight, textOffset;
 	float renderOffset;
 	private int visibleTextStart, visibleTextEnd;
 	private int maxLength;
@@ -217,7 +217,8 @@ public class TextField extends Widget implements Disableable {
 	public void setStyle (TextFieldStyle style) {
 		if (style == null) throw new IllegalArgumentException("style cannot be null.");
 		this.style = style;
-		textHeight = style.font.getCapHeight() - style.font.getDescent() * 2;
+		lineHeight = style.font.getLineHeight();
+		textHeight = style.font.getCapHeight() - style.font.getDescent();
 		invalidateHierarchy();
 	}
 
@@ -359,7 +360,7 @@ public class TextField extends Widget implements Disableable {
 
 	protected float getTextY (BitmapFont font, @Null Drawable background) {
 		float height = getHeight();
-		float textY = textHeight / 2 + font.getDescent();
+		float textY = textHeight / 2;
 		if (background != null) {
 			float bottom = background.getBottomHeight();
 			textY = textY + (height - background.getTopHeight() - bottom) / 2 + bottom;
@@ -372,8 +373,7 @@ public class TextField extends Widget implements Disableable {
 
 	/** Draws selection rectangle **/
 	protected void drawSelection (Drawable selection, Batch batch, BitmapFont font, float x, float y) {
-		selection.draw(batch, x + textOffset + selectionX + fontOffset, y - textHeight - font.getDescent(), selectionWidth,
-			textHeight);
+		selection.draw(batch, x + textOffset + selectionX + fontOffset, y - textHeight / 2 - lineHeight / 2, selectionWidth, lineHeight);
 	}
 
 	protected void drawText (Batch batch, BitmapFont font, float x, float y) {
@@ -387,7 +387,7 @@ public class TextField extends Widget implements Disableable {
 	protected void drawCursor (Drawable cursorPatch, Batch batch, BitmapFont font, float x, float y) {
 		cursorPatch.draw(batch,
 			x + textOffset + glyphPositions.get(cursor) - glyphPositions.get(visibleTextStart) + fontOffset + font.getData().cursorX,
-			y - textHeight - font.getDescent(), cursorPatch.getMinWidth(), textHeight);
+			y - textHeight / 2 - lineHeight / 2, cursorPatch.getMinWidth(), lineHeight);
 	}
 
 	void updateDisplayText () {
@@ -723,7 +723,7 @@ public class TextField extends Widget implements Disableable {
 				style.disabledBackground.getBottomHeight() + style.disabledBackground.getTopHeight());
 			minHeight = Math.max(minHeight, style.disabledBackground.getMinHeight());
 		}
-		return Math.max(topAndBottom + textHeight, minHeight);
+		return Math.max(topAndBottom + lineHeight, minHeight);
 	}
 
 	/** Sets text horizontal alignment (left, center or right).
