@@ -248,6 +248,7 @@ public class GdxTests {
 		TangentialAccelerationTest.class,
 		TextAreaTest.class,
 		TextAreaTest2.class,		
+		TextAreaTest3.class,
 		TextButtonTest.class,
 		TextInputDialogTest.class,
 		TextureAtlasTest.class,
