@@ -8,6 +8,7 @@
 - Fixed GestureDetector maxFlingDelay.
 - API Change: Changed default GestureDetector maxFlingDelay to Integer.MAX_VALUE (didn't work before, this matches that).
 - Gdx.files.external on Android now uses app external storage - see wiki article File handling for more information
+- Improved text, cursor and selection rendering in TextField and TextArea.
 
 [1.9.11]
 - Update to MobiVM 2.3.8
